--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <a href=""> Home </a>
             <a href="">About</a>
-            <a href="">Work</a>
+            <a href="">Portfolio</a>
             <a href="">Contact</a>
         </div>
     </section>
@@ -25,9 +25,9 @@
 <!--------------------- Start Name  area------------------------>
     <section class="section-area ">
         <div class="helf-width">
-            <h1>HELLO ! I'M</h1>
+            <h1>HELLO, I'M</h1>
             <h1 id="name-color">RAYHAN PATWARY</h1>
-            <h3> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</h3>
+            <p> Professional Full stack web designer and Developer.</p>
             <a class="hireme-button" target="_blank" href="https://www.linkedin.com/in/rayhanul-islam-patwary-0b5988172/">Hire Me </a>
         </div>
         <div class="helf-width">
@@ -44,7 +44,8 @@
         </div>
         <div class="helf-width">
             <h1> About Me</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</p> <br>
+            <p>Hi! This is Rayhanul Islam Patwary. I love to coding so much.  I have 1.5 years of experience in creating a professional Website. I love to work, like to use my creativity & want to make my clients happy. This my passion. I am an experienced web-site developing and aslo i can do all kind of graphic design related jobs. Thank you.
+            </p> <br>
             <a class="cv-button" target="_blank" href="https://www.linkedin.com/in/rayhanul-islam-patwary-0b5988172/">Download CV </a>
         </div>
     </section>
@@ -61,7 +62,7 @@
             </div>
             <div class="project-area">
                 <img id="profile-img" src="images/agency.png" alt="">
-                <h2>CREATIVE PROJECT</h2>
+                <h2>CREATIVE AGENCY</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
             </div>
             <div class="project-area">
