final edit done

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <!--------------------- Start Contact area------------------------>
     <section id="contect-with-me">
-        <h1 id="contact-us-text"> <span class="heading-style">CONTACT</span> US</h1>
+        <h1 id="contact-us-text"> <span class="heading-style">Contact</span> Us</h1>
         <div class="contact-width">
             <h4>Your Name :</h4>
             <input class="input-box" type="Name">
