final edit done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>my-web</title>
+    <title>my-portfolio</title>
 </head>
 
 <body>
@@ -79,13 +79,13 @@
         <h1> <span class="heading-style">Clients</span> Reviews</h1>
         <div id="clients-one" class="helf-width reviews-box">
             <img class="clients-img" src="images/jemsbond.jpg" alt="">
-            <h2>Jams Bond</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                <h2>Jams Bond</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
         <div id="clients-two" class="helf-width reviews-box">
             <img class="clients-img" src="images/shakibkhan.jpg" alt="">
-            <h2>Shakib Khan</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                <h2>Shakib Khan</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
     
     </section>
@@ -94,7 +94,7 @@
 <!--------------------- Start Work Inquiary area------------------------>
 <section class="section-area"> 
     <div id="work-inquiry">
-        <h1 id="inquiry-text" >WORK INQUIRY </h1>
+        <h1 id="inquiry-text" >WORK INQUIARY </h1>
         <a id="chat-button" href=""> Let's chat </a>
     </div>
 </section>
@@ -103,29 +103,30 @@
 <!--------------------- Start Contact area------------------------>
     <section id="contect-with-me">
         <h1 id="contact-us-text"> <span class="heading-style">Contact</span> Us</h1>
-        <div class="contact-width">
-            <h4>Your Name :</h4>
-            <input class="input-box" type="Name">
-            <h4>Your Email :</h4>
-            <input class="input-box" type="mail">
-            <h4>Your Massage :</h4>
-            <input class="input-box" type="massage"> <br>
-            <button id="submit-button">Submit</button>
-        </div>
+            <div class="contact-width">
+                <h4>Your Name :</h4>
+                <input class="input-box" type="Name">
+                <h4>Your Email :</h4>
+                <input class="input-box" type="mail">
+                <h4>Your Massage :</h4>
+                <input class="input-box" type="massage"> <br>
+                <button id="submit-button">Submit</button>
+            </div>
 
         <div class="contact-width section-area" id="contact">
             <h2>Stay Connected</h2>
-            <h3>Email: <br>rayhanulislpatwary@gmail.com</h3>
-            <a target="_blank" href="https://www.behance.net/rayhanpatowary"> <img class="icons-size" src="images/icons/behance.png" alt=""> </a>
-            <a target="_blank" href="https://www.instagram.com/rayhanul_subro/"> <img class="icons-size" src="images/icons/insta.png" alt=""> </a>
-            <a target="_blank" href="https://www.linkedin.com/in/rayhanul-islam-patwary-0b5988172/"> <img class="icons-size" src="images/icons/linkedin.png" alt=""> </a>
-            <a target="_blank"  href="https://www.facebook.com/rayhanulislam.patwary.1/"> <img class="icons-size" src="images/icons/facebook.png" alt=""> </a>
-
+                <h3>Email: <br>rayhanulislampatwary@gmail.com</h3>
+                    <a class="contact-link" target="_blank" href="https://www.behance.net/rayhanpatowary"> <img class="icons-size" src="images/icons/behance.png" alt=""> </a>
+                    <a class="contact-link" target="_blank" href="https://www.instagram.com/rayhanul_subro/"> <img class="icons-size" src="images/icons/insta.png" alt=""> </a>
+                    <a class="contact-link" target="_blank" href="https://www.linkedin.com/in/rayhanul-islam-patwary-0b5988172/"> <img class="icons-size" src="images/icons/linkedin.png" alt=""> </a>
+                    <a target="_blank"  href="https://www.facebook.com/rayhanulislam.patwary.1/"> <img class="icons-size" src="images/icons/facebook.png" alt=""> </a>
         </div>
     </section>
     <!--------------------- End Contact area------------------------>
+    <!--------------------- Start Footer area------------------------>
     <footer>
         <p>@Copyright © 2021 rayhanul-islam-patwary</p>
     </footer>
+    <!--------------------- End Footer area------------------------>
     </body>
 </html>
