contact-link edited

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <a class="contact-link" target="_blank" href="https://www.behance.net/rayhanpatowary"> <img class="icons-size" src="images/icons/behance.png" alt=""> </a>
                     <a class="contact-link" target="_blank" href="https://www.instagram.com/rayhanul_subro/"> <img class="icons-size" src="images/icons/insta.png" alt=""> </a>
                     <a class="contact-link" target="_blank" href="https://www.linkedin.com/in/rayhanul-islam-patwary-0b5988172/"> <img class="icons-size" src="images/icons/linkedin.png" alt=""> </a>
-                    <a target="_blank"  href="https://www.facebook.com/rayhanulislam.patwary.1/"> <img class="icons-size" src="images/icons/facebook.png" alt=""> </a>
+                    <a class="contact-link" target="_blank"  href="https://www.facebook.com/rayhanulislam.patwary.1/"> <img class="icons-size" src="images/icons/facebook.png" alt=""> </a>
         </div>
     </section>
     <!--------------------- End Contact area------------------------>
